--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,34 +1,39 @@
-header{
+header {
     display: flex;
     padding: 10px 50px;
     align-items: center;
     justify-content: space-between;
 }
-.menu{
+
+.menu {
     display: none;
     width: 30px;
     cursor: pointer;
-}   
-.nav-banner-container{
+}
+
+.nav-banner-container {
     width: 400px;
     display: flex;
     justify-content: space-between;
 }
-.nav-logo{
-    display: none;
 
+.nav-logo {
+    display: none;
 }
-.search-container{
+
+.search-container {
     width: 100%;
     display: flex;
     justify-content: flex-end;
     align-items: center;
 }
-.nav-banner{
+
+.nav-banner {
     width: 100px;
     cursor: pointer;
 }
-.search{
+
+.search {
     height: 30px;
     width: 30%;
     padding: 0 5px;
@@ -39,32 +44,83 @@ header{
     background-repeat: no-repeat;
     background-position: 98%;
 }
+
 .search::-webkit-search-cancel-button {
     -webkit-appearance: none;
     appearance: none;
 }
-ul{
+
+ul {
     display: flex;
     gap: 25px;
 }
-li{
+
+li {
     list-style: none;
     font-weight: 500;
     font-size: 1rem;
+    position: relative;
 }
-.nav-link{
+
+.nav-link {
     color: #000;
 }
-.nav-link:hover{
+
+.nav-link:hover {
     text-decoration: none;
 }
-.user-container{
+
+.nav-item {
+    position: relative;
+}
+
+.dropdown {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #80e613d3;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    min-width: 200px;
+    max-height: 300px;
+    overflow-y: auto;
+    border-radius: 8px;
+    padding: 5px;
+}
+
+.dropdown li {
+    list-style: none;
+    padding: 4px 12px;
+}
+
+.dropdown li a {
+    color: #fff;
+    text-decoration: none;
+    display: block;
+    font-weight: 500;
+}
+
+.dropdown li:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown li:hover a {
+    color: #000;
+}
+
+.nav-item:hover .dropdown {
+    display: block;
+}
+
+.user-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     cursor: pointer;
 }
-.user-info{
+
+.user-info {
     display: flex;
     width: 30px;
     height: 30px;
@@ -74,26 +130,45 @@ li{
     align-items: center;
     justify-content: center;
 }
-.user-icon{
+
+.user-icon {
     width: 80%;
     cursor: pointer;
 }
 
-@media (max-width: 1024px){
-    .search{
+@media (max-width: 1024px) {
+    .search {
         display: none;
     }
 }
 
 @media (max-width: 640px) {
-    header{
+    header {
         justify-content: space-between;
         padding: 10px 30px;
     }
-    .menu{
+    .menu {
         display: block;
     }
-    nav{
+    nav {
         display: none;
     }
+}
+
+.dropdown::-webkit-scrollbar {
+    width: 11px;
+}
+
+.dropdown::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+.dropdown::-webkit-scrollbar-thumb {
+    background-color: #7fe613;
+    border-radius: 8px;
+    border: 2px solid #f1f1f1;
+}
+
+.dropdown::-webkit-scrollbar-thumb:hover {
+    background-color: #5cb809;
 }
