--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -155,7 +155,28 @@ li {
     .menu {
         display: block;
     }
-    nav {
+
+    nav{
+        background-color: #80e613d3;
+        width: 125px;
+        padding: 15px 10px;
+        position: absolute;
+        top: 40px;
+        left: 0;
+        z-index: 1;
+        border-radius: 0 20px 20px 0;
+    }
+    nav ul{
+        display: flex;
+        flex-direction: column;
+    }
+    li{
+        text-align: center;
+    }
+    .nav-link{
+        color: #fff;
+    }
+    .mobile-hidden{
         display: none;
     }
 }
