--- a/src/pages/HomePage/style.css
+++ b/src/pages/HomePage/style.css
@@ -1,17 +1,21 @@
-.feed {
+.feed{
   display: flex;
-  flex-wrap: wrap;
-  padding: 0 20px;
-  justify-content: space-between;
-  width: 100%;
-  margin-top: 20px;
+  align-items: center;
+  margin-top: 50px;
+  justify-content: center;
+  height: 80vh;
 }
 
+.container{
+  display: grid;
+  grid-template-columns: 1fr 0.3fr;
+  align-items: stretch;
+  width: 100%;
+  height: 100%;
+}
 
-@media (max-width: 1024px) {
-  .feed{
-    flex-direction: column;
-    align-items: center;
-    gap:20px;
-  }
+.carousel-container{
+  margin-left: 45px;
+  grid-row: span 4;
+  border: 1px solid;
 }
