--- a/src/components/News/style.css
+++ b/src/components/News/style.css
@@ -1,19 +1,79 @@
 .news{
-    display: flex;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90%;
+  width: 100%;
+  gap: 10px;
+  padding: 5px;
+}
+
+.news-img{
+  width: 50%;
+  height: 90%;
+  border-radius: 10px;
+}
+
+.news-container{
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  gap: 5px;
+}
+
+.news-title{
+  font-size: 0.9rem;
+  font-weight: 500;
+  color: #343434;
+}
+
+.news-content{
+  display: flex;
+  justify-content: left;
+  font-weight: 300;
+}
+
+.news-link{
+  font-size: .8rem;
+  text-decoration: none !important;
+  border-radius: 10px;
+  padding: 2px 5px;
+}
+
+@media(max-width: 1024px){
+  .news{
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    width: 90%;
-    height: 90%;
   }
-  .details{
+
+  .news-container{
+    align-items: center;
+    height: 5vh;
+  }
+
+  .news-img{
+    height: 50%;
+    width: 90%;
+  }
+
+  .news-title{
+    font-size: .8rem;
+  }
+
+  .news-content{
+    display: none;
+  }
+
+  .news-link{
+    font-size: .7rem;
+  }
+}
+
+@media(max-width: 640px){
+  .news-title{
+    font-size: .7rem;
     text-align: center;
-    font-style: italic;
-    font-size: 0.8rem;
-    color: #343434;
   }
   .news-link{
-    color:blueviolet;
-    text-decoration: none !important;
+    display: none;
   }
+}
