--- a/src/pages/HomePage/style.css
+++ b/src/pages/HomePage/style.css
@@ -1,21 +1,11 @@
-.feed{
-  display: flex;
-  align-items: center;
-  margin-top: 50px;
-  justify-content: center;
-  height: 80vh;
-}
-
-.container{
-  display: grid;
-  grid-template-columns: 1fr 0.3fr;
-  align-items: stretch;
-  width: 100%;
-  height: 100%;
-}
-
 .carousel-container{
-  margin-left: 45px;
-  grid-row: span 4;
-  border: 1px solid;
+  grid-row: span 3;
+  height: 70vh;
+}
+
+@media (max-width: 1024px) {
+  .carousel-container{
+    height: 40vh;  
+    grid-column: span 3;
+  }
 }
