--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -1,30 +1,46 @@
-.feed-item {
-    width: 30%;
-    background-color: #fff;
-    padding: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    text-align: center;
-  }
-  
-.feed-item img {
-  width: 100%;
-  height: 120px;
-  object-fit: contain;
-}
-  
-.feed-item h2 {
-  font-size: 16px;
-  margin: 10px 0;
-}
-  
-.feed-item p {
-  font-size: 12px;
-  color: #666;
-  text-align: justify;
+.feed-item{
+  display: flex;
+  width: 30vw;
+  height: 15vw;
+  position: relative;
+  z-index: -1;
 }
 
-@media (max-width: 1024px) {
+.feed-item img{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.feed-container{
+  width: 70%;
+  position: absolute;
+  top: 20px;
+  left: 20px; 
+}
+
+.feed-item h2{
+  font-size: 1.2rem;
+  text-align: left;
+  color: black;
+}
+
+.feed-item p{
+  overflow: hidden;
+}
+
+@media(max-width: 1024px) {
+  .feed-item h2{
+    font-size: .8rem;
+  }
+}
+
+@media(max-width: 640px){
   .feed-item{
-    width: 60%;
+    width: 45vw;
+    height: 15vh
+  }
+  .feed-item h2{
+    font-size: 0.8rem;
   }
 }
