--- a/src/pages/EventPage/style.css
+++ b/src/pages/EventPage/style.css
@@ -1,16 +1,12 @@
 .feed {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0 20px;
-    justify-content: space-between;
-    width: 100%;
-    margin-top: 20px;
+  height: 74vh;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-items: center;
   }
-  
-  @media (max-width: 1024px) {
+
+  @media (max-width: 640px) {
     .feed{
-      flex-direction: column;
-      align-items: center;
-      gap:20px;
+      grid-template-columns:  1fr 1fr;
     }
   }
