--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,59 +1,63 @@
-footer{
-    height: 15vh;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 50px;
-    box-shadow: 0px -5px 5px 0px rgb(226, 202, 202);
-    background: rgb(140,232,117);
-    background: linear-gradient(90deg, rgba(140,232,117,1) 0%, rgba(255,255,255,1) 100%); 
+footer {
+  height: 15vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 50px;
+  box-shadow: 0px -5px 5px 0px rgb(226, 202, 202);
+  background: rgb(140, 232, 117);
+  background: linear-gradient(
+    90deg,
+    rgba(140, 232, 117, 1) 0%,
+    rgba(255, 255, 255, 1) 100%
+  );
 }
 
-.socials{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+.socials {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
-.links{
-    display: flex;
-    gap: 10px;
+.links {
+  display: flex;
+  gap: 10px;
 }
 
-a{
-    font-size: 1rem;
+a {
+  font-size: 1rem;
 }
 
-p{
-    font-size: .8rem;
-    color: #232323;
+p {
+  font-size: 0.8rem;
+  color: #232323;
 }
 
-.italic{
-    font-style: italic;
+.italic {
+  font-style: italic;
 }
 
-a{
-    color: rgb(47, 192, 10);
+a {
+  color: rgb(47, 192, 10);
 }
 
 @media (max-width: 1024px) {
-    .slogan{
-        display: none;
-    }
+  .slogan {
+    display: none;
+  }
 }
 
 @media (max-width: 640px) {
-    footer{
-        flex-direction: column;
-        justify-content: center;
-    }
+  footer {
+    flex-direction: column;
+    justify-content: center;
+  }
 
-    .links{
-        justify-content: center;
-    }
+  .links {
+    justify-content: center;
+  }
 
-    .copyright{
-        margin-top: 10px;
-    }
+  .copyright {
+    margin-top: 10px;
+  }
 }
