--- a/src/pages/EventPage/style.css
+++ b/src/pages/EventPage/style.css
@@ -1,3 +1,11 @@
+.button-containerr {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  margin-top: 15px;
+  margin-right: 30px;
+}
+
 .feed {
   height: 74vh;
   display: grid;
