--- a/src/pages/NewsPage/style.css
+++ b/src/pages/NewsPage/style.css
@@ -1,12 +1,20 @@
+.button-containerr {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  margin-top: 15px;
+  margin-right: 30px;
+}
+
 .feed {
   height: 74vh;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   justify-items: center;
-  }
+}
 
-  @media (max-width: 640px) {
-    .feed{
-      grid-template-columns:  1fr 1fr;
-    }
+@media (max-width: 640px) {
+  .feed {
+    grid-template-columns: 1fr 1fr;
   }
+}
