--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -1,16 +1,17 @@
-button {
-  width: 100%;
+.login-button {
+  width: 200px;
   max-width: 250px;
   padding: 12px;
   background: linear-gradient(90deg, #5fb900 0%, #559a0d 100%);
   color: white;
   border: none;
-  border-radius: 60px;
+  height: 45px;
+  border-radius: 10px;
   cursor: pointer;
-  font-size: 24px;
+  font-size: 20px;
   margin-bottom: 10px;
 }
 
-button:hover {
+.login-button:hover {
   background-color: #45a049;
 }
