--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -2,7 +2,7 @@
   width: 200px;
   max-width: 250px;
   padding: 12px;
-  background: linear-gradient(90deg, #5fb900 0%, #559a0d 100%);
+  background: linear-gradient(90deg, #292928 0%, #559a0d 100%);
   color: white;
   border: none;
   height: 45px;
