--- a/src/pages/ProfilePage/style.css
+++ b/src/pages/ProfilePage/style.css
@@ -1,87 +1,170 @@
 .ProfilePage {
     display: flex;
     flex-direction: column;
-    padding: 20px;
-    background-color: #ffffff; 
     min-height: 100vh;
 }
 
 .profile-container {
-    background-color: #fff; 
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    width: 100%;
-    max-width: 400px;
-    margin: 20px auto; 
-}
-
-h2 {
-    text-align: center;
-    margin-bottom: 20px;
-    color: #333;
-}
-
-.image-upload-container {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
-}
-
-.profile-image-upload {
-    border: 2px dashed #7fe613;
-    border-radius: 8px;
-    padding: 10px;
-    width: 100%;
-    background-color: #fafafa;
-    cursor: pointer;
-    transition: border-color 0.3s ease;
-}
-
-.profile-image-upload:hover {
-    border-color: #5cb809;
-}
-
-.profile-form {
+    width: 80%;
+    margin: 20px auto;
     display: flex;
     flex-direction: column;
-    align-items: center; 
+    align-items: center;
+    background-color: transparent;
+    border-radius: 10px;
+    padding: 20px;
+}
+.profile-title {
+    font-family: 'Inter', sans-serif;
+    font-weight: 700;
+    font-size: 40px;
+    color: #7FE613;
+    margin-bottom: 20px;
+    margin-left: 250px; 
+}
+
+.profile-content {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.profile-sidebar {
+    width: 265px;
+    padding: 20px;
+    background-color: transparent;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.profile-image {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    margin-bottom: 20px;
+}
+
+.profile-sidebar h3 {
+    font-family: 'Inter', sans-serif;
+    font-size: 24px;
+    font-weight: 700;
+    color: #74757A;
+    margin-bottom: 10px;
+}
+
+.profile-sidebar p {
+    font-family: 'Inter', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    color: #70757A;
+    margin-bottom: 20px;
+}
+
+.edit-button,
+.logout-button {
+    width: 100%;
+    max-width: 250px;
+    padding: 12px;
+    font-size: 24px;
+    border-radius: 60px;
+    cursor: pointer;
+    margin-bottom: 5px; 
+    margin-top: 20px; 
+}
+
+.edit-button {
+    background: linear-gradient(90deg, #5fb900 0%, #559a0d 100%);
+    color: white;
+    border: none;
+}
+
+.logout-button {
+    background: #FFFFFF;
+    color: #70757A;
+    border: none;
+}
+
+.delete-account-button {
+    background-color: #F25C23;
+    color: white;
+    height: 50px;
+    padding: 12px;
+    border-radius: 60px;
+    border: none;
+    font-family: 'Inter', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    cursor: pointer;
+    margin-top: 20px;
+    width: 50%;
+}
+.profile-details {
+    flex-grow: 1;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-left: 20px;
+}
+
+.profile-details h3 {
+    font-family: 'Inter', sans-serif;
+    font-size: 32px;
+    font-weight: 700;
+    color: #70757A;
+}
+
+.profile-description {
+    font-family: 'Inter', sans-serif;
+    font-size: 20px;
+    color: #70757A;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.details-list {
+    display: flex;
+    flex-direction: column;
     gap: 15px;
 }
 
-.profile-form input {
+.detail-item {
+    display: flex;
+    justify-content: space-between;
     padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    background-color: #f1f3f4;
+    border-radius: 8px;
+    color: #70757A;
+}
+
+.detail-item span {
+    font-family: 'Inter', sans-serif;
+    font-size: 18px;
+    font-weight: 600;
+    color: #7A757A;
+}
+
+.detail-item p {
+    font-family: 'Inter', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    color: #7A757A;
+}
+
+.background {
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
-    box-sizing: border-box;
-    font-size: 16px;
+    height: 100%;
+    background-image: url("../../assets/img/BG-01.png");
+    background-size: cover;
+    background-position: center;
+    z-index: -1;
 }
 
-.profile-form input:focus {
-    border-color: #7fe613;
-    outline: none;
-}
-
-.profile-form label {
-    margin-bottom: 5px;
-    font-weight: bold;
-    color: #555;
-    text-align: center;
-}
-
-button {
-    background-color: #7fe613;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    padding: 10px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s ease;
-    width: 100%; 
-}
-
-button:hover {
-    background-color: #5cb809;
+.button-container{
+    display: flex;
+    justify-content: center;
 }
