--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -5,6 +5,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0 20px;
     box-shadow: 0px 5px 5px 0px rgb(226, 202, 202);
     background: rgb(140,232,117);
     background: linear-gradient(90deg, rgba(140,232,117,1) 0%, rgba(255,255,255,1) 100%);   
@@ -84,7 +85,7 @@ li {
     position: absolute;
     top: 100%;
     left: 0;
-    background-color: #80e613d3;
+    background-color: #538320d3;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     z-index: 1;
     min-width: 200px;
