--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -13,6 +13,7 @@ header {
     rgba(140, 232, 117, 1) 0%,
     rgba(255, 255, 255, 1) 100%
   );
+  z-index: 2;
 }
 
 .menu {
@@ -167,7 +168,7 @@ li {
   }
 
   nav {
-    background-color: #80e613d3;
+    background-color: #538320d3;
     width: 125px;
     padding: 15px 10px;
     position: absolute;
