--- a/src/pages/ProfilePage/style.css
+++ b/src/pages/ProfilePage/style.css
@@ -1,170 +1,251 @@
 .ProfilePage {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .profile-container {
-    width: 80%;
-    margin: 20px auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: transparent;
-    border-radius: 10px;
-    padding: 20px;
+  width: 80%;
+  margin: 20px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: transparent;
+  border-radius: 10px;
+  padding: 20px;
 }
+
 .profile-title {
-    font-family: 'Inter', sans-serif;
-    font-weight: 700;
-    font-size: 40px;
-    color: #7FE613;
-    margin-bottom: 20px;
-    margin-left: 250px; 
+  font-family: "Inter", sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+  color: #7fe613;
+  margin-bottom: 20px;
+  margin-left: 250px;
 }
 
 .profile-content {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  flex-wrap: wrap; /* Adicionando wrap para itens em telas menores */
 }
 
 .profile-sidebar {
-    width: 265px;
-    padding: 20px;
-    background-color: transparent;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    text-align: center;
+  width: 265px;
+  padding: 20px;
+  background-color: transparent;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  margin-bottom: 20px; /* Adicionando margem inferior em telas menores */
 }
 
 .profile-image {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    margin-bottom: 20px;
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  margin-bottom: 20px;
+  object-fit: cover; /* Garantindo que a imagem não distorça */
 }
 
 .profile-sidebar h3 {
-    font-family: 'Inter', sans-serif;
-    font-size: 24px;
-    font-weight: 700;
-    color: #74757A;
-    margin-bottom: 10px;
+  font-family: "Inter", sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+  color: #74757a;
+  margin-bottom: 10px;
 }
 
 .profile-sidebar p {
-    font-family: 'Inter', sans-serif;
-    font-size: 18px;
-    font-weight: 400;
-    color: #70757A;
-    margin-bottom: 20px;
+  font-family: "Inter", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  color: #70757a;
+  margin-bottom: 20px;
 }
 
 .edit-button,
 .logout-button {
-    width: 100%;
-    max-width: 250px;
-    padding: 12px;
-    font-size: 24px;
-    border-radius: 60px;
-    cursor: pointer;
-    margin-bottom: 5px; 
-    margin-top: 20px; 
+  width: 100%;
+  max-width: 250px;
+  padding: 12px;
+  font-size: 24px;
+  border-radius: 60px;
+  cursor: pointer;
+  margin-bottom: 5px;
+  margin-top: 20px;
 }
 
 .edit-button {
-    background: linear-gradient(90deg, #5fb900 0%, #559a0d 100%);
-    color: white;
-    border: none;
+  background: linear-gradient(90deg, #5fb900 0%, #559a0d 100%);
+  color: white;
+  border: none;
 }
 
 .logout-button {
-    background: #FFFFFF;
-    color: #70757A;
-    border: none;
+  background: #ffffff;
+  color: #70757a;
+  border: none;
 }
 
 .delete-account-button {
-    background-color: #F25C23;
-    color: white;
-    height: 50px;
-    padding: 12px;
-    border-radius: 60px;
-    border: none;
-    font-family: 'Inter', sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    cursor: pointer;
-    margin-top: 20px;
-    width: 50%;
+  background-color: #f25c23;
+  color: white;
+  height: 50px;
+  padding: 12px;
+  border-radius: 60px;
+  border: none;
+  font-family: "Inter", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  cursor: pointer;
+  margin-top: 20px;
+  width: 50%;
 }
+
 .profile-details {
-    flex-grow: 1;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    margin-left: 20px;
+  flex-grow: 1;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin-left: 20px;
+  margin-bottom: 20px; /* Adicionando margem inferior em telas menores */
 }
 
 .profile-details h3 {
-    font-family: 'Inter', sans-serif;
-    font-size: 32px;
-    font-weight: 700;
-    color: #70757A;
+  font-family: "Inter", sans-serif;
+  font-size: 32px;
+  font-weight: 700;
+  color: #70757a;
 }
 
 .profile-description {
-    font-family: 'Inter', sans-serif;
-    font-size: 20px;
-    color: #70757A;
-    margin-top: 10px;
-    margin-bottom: 20px;
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  color: #70757a;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 .details-list {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 
 .detail-item {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    background-color: #f1f3f4;
-    border-radius: 8px;
-    color: #70757A;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  background-color: #f1f3f4;
+  border-radius: 8px;
+  color: #70757a;
 }
 
 .detail-item span {
-    font-family: 'Inter', sans-serif;
-    font-size: 18px;
-    font-weight: 600;
-    color: #7A757A;
+  font-family: "Inter", sans-serif;
+  font-size: 18px;
+  font-weight: 600;
+  color: #7a757a;
 }
 
 .detail-item p {
-    font-family: 'Inter', sans-serif;
-    font-size: 18px;
-    font-weight: 400;
-    color: #7A757A;
+  font-family: "Inter", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  color: #7a757a;
 }
 
 .background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url("../../assets/img/BG-01.png");
-    background-size: cover;
-    background-position: center;
-    z-index: -1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("../../assets/img/BG-01.png");
+  background-size: cover;
+  background-position: center;
+  z-index: -1;
 }
 
-.button-container{
-    display: flex;
-    justify-content: center;
+.button-container {
+  display: flex;
+  justify-content: center;
+}
+
+/* Responsividade */
+@media (max-width: 1024px) {
+  .profile-content {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .profile-sidebar {
+    width: 90%;
+    text-align: center;
+  }
+
+  .profile-details {
+    width: 90%;
+    margin-left: 0;
+  }
+
+  .profile-title {
+    margin-left: 0;
+    text-align: center;
+  }
+
+  .edit-button,
+  .logout-button,
+  .delete-account-button {
+    width: 100%;
+    font-size: 20px;
+    padding: 10px;
+  }
+
+  .profile-image {
+    width: 120px;
+    height: 120px;
+  }
+}
+
+@media (max-width: 640px) {
+  .profile-title {
+    font-size: 30px;
+  }
+
+  .profile-sidebar h3 {
+    font-size: 20px;
+  }
+
+  .profile-sidebar p {
+    font-size: 16px;
+  }
+
+  .profile-details h3 {
+    font-size: 28px;
+  }
+
+  .profile-description {
+    font-size: 18px;
+  }
+
+  .details-list .detail-item {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .edit-button,
+  .logout-button,
+  .delete-account-button {
+    font-size: 16px;
+    padding: 10px;
+  }
+
+  .profile-image {
+    width: 100px;
+    height: 100px;
+  }
 }
